--- a/application/Dockerfile
+++ b/application/Dockerfile
@@ -1,3 +1,13 @@
-FROM public.ecr.aws/nginx/nginx
-COPY . /usr/share/nginx/html/
-# CMD ["nginx", "-g", "daemon off;"]
+FROM public.ecr.aws/docker/library/node:14
+# Create app directory
+WORKDIR /usr/src/app
+# Install app dependencies
+# A wildcard is used to ensure both package.json AND package-lock.json are copied
+# where available (npm@5+)
+COPY package*.json ./
+
+RUN npm install
+# Bundle app source
+COPY . .
+EXPOSE 8088
+CMD [ "node", "server.js" ]
