--- a/eks/01-agent.yaml
+++ b/eks/01-agent.yaml
@@ -14,10 +14,11 @@ spec:
       labels:
         app: appconfig-blog
     spec:
+      serviceAccountName: appconfig
       containers:
         - name: my-app
           image: 318168271290.dkr.ecr.us-east-2.amazonaws.com/appconfig-blog-app:latest
-          imagePullPolicy: IfNotPresent
+          imagePullPolicy: Always
         - name: appconfig-agent
           image: public.ecr.aws/aws-appconfig/aws-appconfig-agent:2.x
           ports:
@@ -27,4 +28,4 @@ spec:
           env:
             - name: us-east-2
               value: region
-          imagePullPoliy: IfNotPresent
+          imagePullPolicy: Always
